[package]
name = "rusty-pipe"
version = "0.1.0"
authors = ["Coding Badly <bcook@rowdydog.com>"]
edition = "2018"

[dependencies]
ansi_term = "0"
args = "2.1"
base64 = "0.11"
caps = "0.3"
chrono = "0.4"
clap = "2.33"
cookie = "0.12"
cookie_store = "0.7"
enum-as-inner = "0.2"
fuchsia-cprng = "0.1"
futures = "0.3"
futures-util = "0.3"
getopts = "0.2"
getrandom = "0.1"
h2 = "0.2"
hex = "0.4"
hostname = "0.1"
http = "0.2"
hyper = "0.13"
hyper-rustls = "0.16"
ipconfig = "0.2"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
log4rs = "0.9"
lru-cache = "0.1"
mime = "0.3"
mio-uds = "0.6"
mockito = "0.23"
nix = "0.17"
ntp = "0.5"
num_cpus = "1.12"
oid = "0.1"
os_info = "1.3"
os_type = "2.2"
picky = "4.6"
picky-asn1 = "0.2"
picky-asn1-der = "0.2"
pin-project = "0.4"
proc-macro2 = "0.4"
publicsuffix = "1.5"
quote = "0.6"
rand = "0.7"
rand_chacha = "0.2"
rdrand = "0.4"
regex = "1.3"
# reqwest = "0.9.19"
reqwest = "0.10"
resolv-conf = "0.6"
ring = "0.14"
rpassword = "4.0"
semver = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
sha2 = "0.8"
signal-hook = "0.1"
socket2 = "0.3"
structopt = "0.3"
strum = "0.17"
strum_macros = "0.17"
syn = "0.15"
sysinfo = "0.10"
systemstat = "0.1"
time = "0.1"
tokio = "0.2"
tokio-codec = "0.1"
tokio-fs = "0.1"
tokio-udp = "0.1"
tokio-uds = "0.2"
toml = "0.5"
touch = "0"
trust-dns-proto = "0.7"
trust-dns-resolver = "0.11"
try_from = "0.3"
unicode-xid = "0.1"
untrusted = "0.6"
url = "1.7"
users = "0"
wasi = "0.7"
widestring = "0.4"
winapi = { version = "0.3", features = ["impl-default", "combaseapi", "consoleapi", "errhandlingapi", "handleapi", "knownfolders", "lmcons",  "minwinbase", "minwindef", "ntdef", "processthreadsapi", "securitybaseapi", "shlobj", "synchapi", "winbase", "wincon", "winerror", "winnt", "winsvc", "winuser", "winver", ] }
winutil = "0.1"
