[package]
name = "rusty-pipe"
version = "0.1.0"
authors = ["Coding Badly <bcook@rowdydog.com>"]
edition = "2018"

[dependencies]
ansi_term = "0"
args = "2.1"
arrayref = "0.3"
arrayvec = "0.5"
base64 = "0.11"
bitflags = "0.7"
blake2b_simd = "0.5"
# caps = "0.3"
chrono = "0.4"
clap = "2.33"
constant_time_eq = "0.1"
cookie = "0.12"
cookie_store = "0.7"
# core-foundation = "0.7"
# core-foundation-sys = "0.7"
darwin-libproc = "0.1"
darwin-libproc-sys = "0.1"
dirs = "2.0"
dirs-sys = "0.3"
enum-as-inner = "0.2"
fuchsia-cprng = "0.1"
futures = "0.3"
futures-util = "0.3"
getopts = "0.2"
getrandom = "0.1.13"
h2 = "0.2"
heim = "0.0"
heim-common = "0.0"
heim-cpu = "0.0"
heim-derive = "0.0"
heim-disk = "0.0"
heim-host = "0.0"
heim-memory = "0.0"
heim-net = "0.0"
heim-process = "0.0"
heim-runtime = "0.0"
heim-sensors = "0.0"
heim-virt = "0.0"
hex = "0.4"
hostname = "0.1"
http = "0.2"
hyper = "0.13"
hyper-rustls = "0.16"
# ifaces = "0.1"
ipconfig = "0.2"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
log4rs = "0.9"
lru-cache = "0.1"
macaddr = "0.1"
# mach = "0.3"
memchr = "2.2"
mime = "0.3"
mio-uds = "0.6"
mockito = "0.23"
nix = "0.16"
ntp = "0.5"
num-rational = "0.2"
num_cpus = "1.12"
oid = "0.1"
os_info = "1.3"
os_type = "2.2"
picky = "4.6"
picky-asn1 = "0.2"
picky-asn1-der = "0.2"
pin-project = "0.4"
proc-macro-error = "0.4"
proc-macro-error-attr = "0.4"
proc-macro2 = "0.4"
publicsuffix = "1.5"
quote = "0.6"
rand = "0.7"
rand_chacha = "0.2"
raw-cpuid = "7.0"
rdrand = "0.4"
# redox_users = "0.3"
regex = "1.3"
reqwest = "0.9"
resolv-conf = "0.6"
ring = "0.14"
rpassword = "4.0"
rust-argon2 = "0.7"
rustc_version = "0.1"
semver = "0.9"
serde = "1.0"
serde_json = "1.0.47"
serde_urlencoded = "0.5"
sha2 = "0.8"
signal-hook = "0.1"
socket2 = "0.3"
structopt = "0.3"
structopt-derive = "0.4"
strum = "0.17"
strum_macros = "0.17"
syn = "0.15"
sysinfo = "0.10"
systemstat = "0.1"
threadpool = "1.7"
time = "0.1"
tokio = "0.2"
tokio-codec = "0.1"
tokio-fs = "0.1"
tokio-macros = "0.2"
tokio-udp = "0.1"
tokio-uds = "0.2"
toml = "0.5"
touch = "0"
trust-dns-proto = "0.7"
trust-dns-resolver = "0.11"
try_from = "0.3"
unicode-xid = "0.1"
untrusted = "0.6"
uom = "0.26"
url = "1.7"
# users = "0"
uuid = "0.8"
wasi = "0.7"
widestring = "0.4"
winapi = { version = "0.3", features = ["impl-default", "combaseapi", "consoleapi", "errhandlingapi", "handleapi", "knownfolders", "lmcons",  "minwinbase", "minwindef", "ntdef", "processthreadsapi", "securitybaseapi", "shlobj", "synchapi", "winbase", "wincon", "winerror", "winnt", "winsvc", "winuser", "winver", ] }
winutil = "0.1"
