[package]
name = "rusty-pipe"
version = "0.1.0"
authors = ["Coding Badly <bcook@rowdydog.com>"]
edition = "2018"

[dependencies]
adler32 = "1.0.4"
aho-corasick = "0.7.10"
ansi_term = "0.12"
arc-swap = "0.4.5"
args = "2.2.0"
arrayref = "0.3.6"
arrayvec = "0.5.1"
assert-json-diff = "1.0.3"
async-trait = "0.1.26"
atty = "0.2.14"
autocfg = "1.0.0"
backtrace = "0.3.46"
backtrace-sys = "0.1.35"
base64 = "0.12"
bincode = "1.2.1"
bitflags = "1.2.1"
blake2b_simd = "0.5.10"
block-buffer = "0.7.3"
block-padding = "0.1.5"
bumpalo = "3.2.1"
byte-tools = "0.3.1"
byteorder = "1.3.4"
bytes = "0.5.4"
bytesize = "1.0.0"
# caps = "0.3.4"
cc = "1.0.50"
cfg-if = "0.1.10"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
cloudabi = "0.0.3"
colored = "1.9.3"
constant_time_eq = "0.1.5"
conv = "0.3.3"
# core-foundation = "0.7.0"
# core-foundation-sys = "0.7.0"
crc32fast = "1.2.0"
crossbeam-deque = "0.7.3"
crossbeam-epoch = "0.8.2"
crossbeam-queue = "0.2.1"
crossbeam-utils = "0.7.2"
ct-logs = "0.6.0"
custom_derive = "0.1.7"
darwin-libproc = "0.1.2"
darwin-libproc-sys = "0.1.2"
difference = "2.0.0"
digest = "0.8.1"
dirs = "2.0.2"
dirs-sys = "0.3.4"
doc-comment = "0.3.3"
dtoa = "0.4.5"
either = "1.5.3"
encoding_rs = "0.8.22"
enum-as-inner = "0.3.2"
errno = "0.2.4"
errno-dragonfly = "0.1.1"
error-chain = "0.12.2"
extend = "0.1.1"
failure = "0.1.7"
failure_derive = "0.1.7"
fake-simd = "0.1.2"
flate2 = "1.0.14"
fnv = "1.0.6"
fuchsia-zircon = "0.3.3"
fuchsia-zircon-sys = "0.3.3"
futures = "0.3.4"
futures-channel = "0.3.4"
futures-core = "0.3.4"
futures-executor = "0.3.4"
futures-io = "0.3.4"
futures-macro = "0.3.4"
futures-sink = "0.3.4"
futures-task = "0.3.4"
futures-util = "0.3.4"
gcc = "0.3.55"
generic-array = "0.12.3"
getopts = "0.2"
getrandom = "0.1.13"
h2 = "0.2.3"
heck = "0.3.1"
# heim = "0.0.9"
# heim-common = "0.0.9"
# heim-cpu = "0.0.9"
# heim-derive = "0.0.9"
# heim-disk = "0.0.9"
# heim-host = "0.0.9"
# heim-memory = "0.0.9"
# heim-net = "0.0.9"
# heim-process = "0.0.9"
# heim-runtime = "0.0.5"
# heim-sensors = "0.0.4"
# heim-virt = "0.0.9"
# hermit-abi = "0.1.8"
hex = "0.4.2"
hostname = "0.3.1"
http = "0.2"
http-body = "0.3.1"
httparse = "1.3.4"
humantime = "1.3.0"
hyper = "0.13.4"
hyper-rustls = { version = "0.20.0", default-features=false }
idna = "0.2.0"
# ifaces = "0.1.0"
indexmap = "1.3.2"
iovec = "0.1.4"
ipconfig = "0.2.1"
itoa = "0.4.5"
js-sys = "0.3.37"
kernel32-sys = "0.2.2"
lazy_static = "1.4.0"
libc = "0.2"
libm = "0.2.1"
linked-hash-map = "0.5.2"
lock_api = "0.3.3"
log = "0.4"
log-mdc = "0.1.0"
log4rs = "0.11"
lru-cache = "0.1.2"
macaddr = "0.1.2"
# mach = "0.3.2"
match_cfg = "0.1.0"
matches = "0.1.8"
maybe-uninit = "2.0.0"
memchr = "2.2.1"
memoffset = "0.5.4"
mime = "0.3"
mime_guess = "2.0.3"
miniz_oxide = "0.3.6"
mio = "0.7.0"
mio-named-pipes = "0.1.6"
mio-uds = "0.6.7"
miow = "0.3.3"
# mockito = "0.23"
net2 = "0.2.33"
nix = "0.17"
nom = "3.2.1"
ntapi = "0.3.3"
ntp = "0.5"
num-bigint-dig = "0.6.0"
num-integer = "0.1.42"
num-iter = "0.1.40"
num-rational = "0.2.4"
num-traits = "0.2.11"
num_cpus = "1.12"
oid = "0.1"
once_cell = "1.3"
opaque-debug = "0.2.3"
openssl-probe = "0.1.2"
ordered-float = "1.0.2"
os_info = "1.3.3"
os_type = "2.2.0"
parking_lot = "0.10.0"
parking_lot_core = "0.7.0"
percent-encoding = "2.1.0"
picky = { version = "4.6", default-features = false }
picky-asn1 = { version = "0.2", features  = ["chrono_conversion"] }
picky-asn1-der = "0.2"
pin-project = "0.4.8"
pin-project-internal = "0.4.8"
pin-project-lite = "0.1.4"
pin-utils = "0.1.0-alpha.4"
platforms = "0.2.1"
ppv-lite86 = "0.2.6"
proc-macro-error = "0.4.12"
proc-macro-error-attr = "0.4.12"
proc-macro-hack = "0.5.14"
proc-macro-nested = "0.1.4"
proc-macro2 = "1.0.9"
quick-error = "1.2.3"
quote = "1.0.3"
rand = "0.7"
rand_chacha = "0.2"
rand_core = "0.5.1"
rand_hc = "0.2.0"
raw-cpuid = "7.0.3"
rayon = "1.3.0"
rayon-core = "1.7.0"
# redox_syscall = "0.1.56"
# redox_users = "0.3.4"
regex = "1.3"
regex-syntax = "0.6.17"
reqwest = { version = "0.10", features = ["rustls-tls", "blocking", "trust-dns", "json"], default-features = false }
resolv-conf = "0.6.3"
ring = "0.16"
rpassword = "4.0"
rsa = "0.2.0"
rust-argon2 = "0.7.0"
rustc-demangle = "0.1.16"
rustc_version = "0.2.3"
rustls = "0.17.0"
rustls-native-certs = "0.3.0"
ryu = "1.0.3"
schannel = "0.1.18"
scopeguard = "1.1.0"
sct = "0.6.0"
# security-framework = "0.4.1"
# security-framework-sys = "0.4.1"
semver = "0.9"
semver-parser = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.6.0"
serde_bytes = "0.11.3"
serde_derive = "1.0.105"
serde_json = "1.0"
serde_urlencoded = "0.6.1"
serde_yaml = "0.8"
sha-1 = "0.8.2"
sha2 = "0.8"
signal-hook = "0.1.13"
signal-hook-registry = "1.2.0"
slab = "0.4.2"
smallvec = "1.2.0"
snafu = "0.6.3"
snafu-derive = "0.6.3"
socket2 = "0.3.11"
spin = "0.5.2"
static_assertions = "1.1.0"
strsim = "0.8.0"
structopt = "0.3.12"
structopt-derive = "0.4.5"
strum = "0.18"
strum_macros = "0.18"
subtle = "2.2.2"
syn = "1.0.17"
syn-mid = "0.5.0"
synstructure = "0.12.3"
sysinfo = "0.12"
systemstat = "0.1"
textwrap = "0.11.0"
thiserror = "1.0.13"
thiserror-impl = "1.0.13"
thread-id = "3.3.0"
thread_local = "1.0.1"
threadpool = "1.7.1"
time = "0.1"
tokio = { version = "0.2", features = ["stream", "rt-threaded"] }
tokio-bincode = "0.1.0"
tokio-codec = "0.1.2"
tokio-io = "0.1.13"
tokio-macros = "0.2.5"
tokio-rustls = "0.13.0"
tokio-util = "0.2.0"
toml = "0.5"
tower-service = "0.3.0"
traitobject = "0.1.0"
trust-dns-proto = "0.19.3"
trust-dns-resolver = "0.19.3"
try-lock = "0.2.2"
typemap = "0.3.3"
typenum = "1.11.2"
unicase = "2.6.0"
unicode-bidi = "0.3.4"
unicode-normalization = "0.1.12"
unicode-segmentation = "1.6.0"
unicode-width = "0.1.7"
unicode-xid = "0.2.0"
unsafe-any = "0.4.2"
untrusted = "0.7.0"
uom = "0.26.0"
# url = "2.1"
# users = "0.9.1"
uuid = { version = "0.8", features = ["v4"] }
vec_map = "0.8.1"
version_check = "0.9.1"
void = "1.0.2"
want = "0.3.0"
wasi = "0.7.0"
wasm-bindgen = "0.2.60"
wasm-bindgen-backend = "0.2.60"
wasm-bindgen-futures = "0.4.10"
wasm-bindgen-macro = "0.2.60"
wasm-bindgen-macro-support = "0.2.60"
wasm-bindgen-shared = "0.2.60"
web-sys = "0.3.37"
webpki = "0.21.2"
webpki-roots = "0.18.0"
widestring = "0.4.0"
winapi = { version = "0.3", features = ["impl-default", "basetsd", "consoleapi", "errhandlingapi", "guiddef", "handleapi", "minwindef", "processthreadsapi", "rpcdce", "synchapi", "winbase", "wincon", "winerror", "winnt", "winsvc", "winuser", ] }
winapi-build = "0.1.1"
winapi-i686-pc-windows-gnu = "0.4.0"
winapi-x86_64-pc-windows-gnu = "0.4.0"
winreg = "0.6.2"
ws2_32-sys = "0.2.1"
yaml-rust = "0.4.3"
zeroize = "1.1.0"
zeroize_derive = "1.0.0"