[package]
name = "mirror"
version = "0.1.0"
authors = ["Coding Badly <bcook@rowdydog.com>"]
edition = "2018"

[dependencies]
addr2line = "0.13.0"
adler = "0.2.3"
aho-corasick = "0.7.13"
ansi_term = "0.12.1"
anyhow = "1.0.32"
arc-swap = "0.4.7"
args = "2.2.0"
arrayref = "0.3.6"
arrayvec = "0.5.1"
assert-json-diff = "1.1.0"
async-stream = "0.2.1"
async-stream-impl = "0.2.1"
async-trait = "0.1.36"
atty = "0.2.14"
autocfg = "1.0.0"
backtrace = "0.3.50"
base64 = "0.12.3"
bincode = "1.3.1"
bit-set = "0.5.2"
bit-vec = "0.6.2"
bitflags = "1.2.1"
blake2b_simd = "0.5.10"
block-buffer = "0.7.3"
block-padding = "0.1.5"
bumpalo = "3.4.0"
byte-tools = "0.3.1"
byteorder = "1.3.4"
bytes = "0.5.6"
bytesize = "1.0.1"
caps = "0.3.4"
cc = "1.0.58"
cfg-if = "0.1.10"
chrono = "0.4.13"
clap = "2.33.2"
cloudabi = "0.0.3"
colored = "1.9.3"
constant_time_eq = "0.1.5"
conv = "0.3.3"
core-foundation = "0.7.0"
core-foundation-sys = "0.7.0"
crc32fast = "1.2.0"
crossbeam-deque = "0.7.3"
crossbeam-epoch = "0.8.2"
crossbeam-queue = "0.2.3"
crossbeam-utils = "0.7.2"
custom_derive = "0.1.7"
darwin-libproc = "0.1.2"
darwin-libproc-sys = "0.1.2"
difference = "2.0.0"
digest = "0.8.1"
dirs = "2.0.2"
dirs-sys = "0.3.5"
doc-comment = "0.3.3"
dtoa = "0.4.6"
either = "1.5.3"
encoding_rs = "0.8.23"
enum-as-inner = "0.3.2"
errno = "0.2.6"
errno-dragonfly = "0.1.1"
error-chain = "0.12.4"
extend = "0.1.2"
failure = "0.1.8"
failure_derive = "0.1.8"
fake-simd = "0.1.2"
filetime = "0.2.11"
fixedbitset = "0.2.0"
flate2 = "1.0.16"
fnv = "1.0.7"
fuchsia-zircon = "0.3.3"
fuchsia-zircon-sys = "0.3.3"
futures = "0.3.5"
futures-channel = "0.3.5"
futures-core = "0.3.5"
futures-executor = "0.3.5"
futures-io = "0.3.5"
futures-macro = "0.3.5"
futures-sink = "0.3.5"
futures-task = "0.3.5"
futures-util = "0.3.5"
gcc = "0.3.55"
generic-array = "0.12.3"
getopts = "0.2.21"
getrandom = "0.1.14"
gimli = "0.22.0"
h2 = "0.2.6"
hashbrown = "0.8.1"
heck = "0.3.1"
heim = "0.0.9"
heim-common = "0.0.9"
heim-cpu = "0.0.9"
heim-derive = "0.0.9"
heim-disk = "0.0.9"
heim-host = "0.0.9"
heim-memory = "0.0.9"
heim-net = "0.0.9"
heim-process = "0.0.9"
heim-runtime = "0.0.5"
heim-sensors = "0.0.4"
heim-virt = "0.0.9"
hermit-abi = "0.1.15"
hex = "0.4.2"
hostname = "0.3.1"
http = "0.2.1"
http-body = "0.3.1"
httparse = "1.3.4"
humantime = "1.3.0"
hyper = "0.13.7"
hyper-rustls = "0.21.0"
hyperlocal = "0.7.0"
idna = "0.2.0"
ifaces = "0.1.0"
indexmap = "1.5.0"
iovec = "0.1.4"
ipconfig = "0.2.2"
ipnet = "2.3.0"
itertools = "0.8.2"
itoa = "0.4.6"
js-sys = "0.3.44"
kernel32-sys = "0.2.2"
lazy_static = "1.4.0"
libc = "0.2.74"
libm = "0.2.1"
linked-hash-map = "0.5.3"
lock_api = "0.3.4"
log = "0.4.11"
log-mdc = "0.1.0"
log4rs = "0.11.0"
lru-cache = "0.1.2"
lzma-sys = "0.1.16"
macaddr = "0.1.2"
mach = "0.3.2"
match_cfg = "0.1.0"
matches = "0.1.8"
maybe-uninit = "2.0.0"
memchr = "2.2.1"
memoffset = "0.5.5"
mime = "0.3.16"
mime_guess = "2.0.3"
miniz_oxide = "0.4.0"
mio = "0.7.0"
mio-named-pipes = "0.1.7"
mio-uds = "0.6.8"
miow = "0.3.5"
mockito = "0.25.3"
multimap = "0.8.1"
net2 = "0.2.34"
nix = "0.17.0"
nom = "3.2.1"
ntapi = "0.3.4"
ntp = "0.5.0"
num-bigint-dig = "0.6.0"
num-integer = "0.1.43"
num-iter = "0.1.41"
num-rational = "0.2.4"
num-traits = "0.2.12"
num_cpus = "1.13.0"
object = "0.20.0"
oid = "0.1.1"
once_cell = "1.4.0"
opaque-debug = "0.2.3"
ordered-float = "1.0.2"
os_info = "1.3.3"
os_type = "2.2.0"
parking_lot = "0.10.2"
parking_lot_core = "0.7.2"
percent-encoding = "2.1.0"
petgraph = "0.5.1"
picky = "4.7.0"
picky-asn1 = "0.2.2"
picky-asn1-der = "0.2.2"
pin-project = "0.4.23"
pin-project-internal = "0.4.23"
pin-project-lite = "0.1.7"
pin-utils = "0.1.0"
pkg-config = "0.3.18"
platforms = "0.2.1"
ppv-lite86 = "0.2.8"
proc-macro-error = "1.0.4"
proc-macro-error-attr = "1.0.4"
proc-macro-hack = "0.5.18"
proc-macro-nested = "0.1.6"
proc-macro2 = "1.0.19"
prost = "0.6.1"
prost-build = "0.6.1"
prost-derive = "0.6.1"
prost-types = "0.6.1"
quick-error = "1.2.3"
quote = "1.0.7"
rand = "0.7.3"
rand_chacha = "0.2.2"
rand_core = "0.5.1"
rand_hc = "0.2.0"
rand_pcg = "0.2.1"
raw-cpuid = "7.0.3"
rayon = "1.3.1"
rayon-core = "1.7.1"
redox_syscall = "0.1.57"
redox_users = "0.3.4"
regex = "1.3.9"
regex-syntax = "0.6.18"
remove_dir_all = "0.5.3"
reqwest = "0.10.7"
resolv-conf = "0.6.3"
ring = "0.16.15"
rpassword = "4.0.5"
rsa = "0.2.0"
rust-argon2 = "0.7.0"
rustc-demangle = "0.1.16"
rustc_version = "0.2.3"
rustls = "0.18.0"
ryu = "1.0.5"
same-file = "1.0.6"
scopeguard = "1.1.0"
sct = "0.6.0"
semver = "0.9.0"
semver-parser = "0.7.0"
serde = "1.0.114"
serde-value = "0.6.0"
serde_bytes = "0.11.5"
serde_derive = "1.0.114"
serde_json = "1.0.57"
serde_urlencoded = "0.6.1"
serde_yaml = "0.8.13"
sha-1 = "0.8.2"
sha2 = "0.8.2"
signal-hook = "0.1.16"
signal-hook-registry = "1.2.1"
slab = "0.4.2"
smallvec = "1.4.1"
snafu = "0.6.8"
snafu-derive = "0.6.8"
socket2 = "0.3.12"
spin = "0.5.2"
static_assertions = "1.1.0"
strsim = "0.8.0"
structopt = "0.3.16"
structopt-derive = "0.4.9"
strum = "0.18.0"
strum_macros = "0.18.0"
subtle = "2.2.3"
syn = "1.0.38"
synstructure = "0.12.4"
sysinfo = "0.15.1"
systemstat = "0.1.5"
tar = "0.4.29"
tempfile = "3.1.0"
textwrap = "0.11.0"
thiserror = "1.0.20"
thiserror-impl = "1.0.20"
thread-id = "3.3.0"
thread_local = "1.0.1"
threadpool = "1.8.1"
time = "0.1.43"
tinyvec = "0.3.3"
tokio = "0.2.22"
tokio-macros = "0.2.5"
tokio-rustls = "0.14.0"
tokio-util = "0.3.1"
toml = "0.5.6"
tonic = "0.3.0"
tonic-build = "0.2.0"
tower = "0.3.1"
tower-balance = "0.3.0"
tower-buffer = "0.3.0"
tower-discover = "0.3.0"
tower-layer = "0.3.0"
tower-limit = "0.3.1"
tower-load = "0.3.0"
tower-load-shed = "0.3.0"
tower-make = "0.3.0"
tower-ready-cache = "0.3.1"
tower-retry = "0.3.0"
tower-service = "0.3.0"
tower-timeout = "0.3.0"
tower-util = "0.3.1"
tracing = "0.1.18"
tracing-attributes = "0.1.9"
tracing-core = "0.1.13"
tracing-futures = "0.2.4"
traitobject = "0.1.0"
trust-dns-proto = "0.19.5"
trust-dns-resolver = "0.19.5"
try-lock = "0.2.3"
typemap = "0.3.3"
typenum = "1.12.0"
unicase = "2.6.0"
unicode-bidi = "0.3.4"
unicode-normalization = "0.1.13"
unicode-segmentation = "1.6.0"
unicode-width = "0.1.8"
unicode-xid = "0.2.1"
unsafe-any = "0.4.2"
untrusted = "0.7.1"
uom = "0.26.0"
url = "2.1.1"
users = "0.10.0"
uuid = "0.8.1"
vec_map = "0.8.2"
version_check = "0.9.2"
void = "1.0.2"
walkdir = "2.3.1"
want = "0.3.0"
wasi = "0.9.0"
wasm-bindgen = "0.2.67"
wasm-bindgen-backend = "0.2.67"
wasm-bindgen-futures = "0.4.17"
wasm-bindgen-macro = "0.2.67"
wasm-bindgen-macro-support = "0.2.67"
wasm-bindgen-shared = "0.2.67"
web-sys = "0.3.44"
webpki = "0.21.3"
webpki-roots = "0.19.0"
which = "3.1.1"
widestring = "0.4.2"
winapi = "0.3.9"
winapi-build = "0.1.1"
winapi-i686-pc-windows-gnu = "0.4.0"
winapi-util = "0.1.5"
winapi-x86_64-pc-windows-gnu = "0.4.0"
winreg = "0.7.0"
ws2_32-sys = "0.2.1"
xattr = "0.2.2"
xz2 = "0.1.6"
yaml-rust = "0.4.4"
zeroize = "1.1.0"
zeroize_derive = "1.0.0"
